선형회귀, 결정트리, SVM 모델 설정 비교
선형회귀, 결정트리, SVM 모델 설정 비교
단. 선형회귀는 모델 데이터 셋이 달라짐

--- a/AdaBoost/AdaBoost_DecisionTree.ipynb
+++ b/AdaBoost/AdaBoost_DecisionTree.ipynb
@@ -132,6 +132,8 @@
     "\n",
     "# 에이다부스트 모델 생성\n",
     "# 기본 분류 모델 : 결정트리 분류기\n",
+    "# 결정 트리 분류기를 기본 estimator로 사용, max_depth =1\n",
+    "# 깊이가 1인 결정 트리 분류기\n",
     "base_estimator = DecisionTreeClassifier(max_depth=1)\n",
     "# AdaBoost분류기\n",
     "# base_estimator, estimator의 개수는 -> 약한 학습기 50개\n",
